# hippocampus

./: .env  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  biome.jsonc  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  setup.sh
cluster/applications/api/: .env  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/api/api/: cancellation.py  circuit_breaker.py  main.py  settings.py  sse_buffer.py  telemetry.py
cluster/applications/bot/: .env  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  slack_bulk_message.py  slack_message_event.py  slack_raise_rate_limit.py
cluster/applications/bot/bot/: context_logging.py  main.py  settings.py  telemetry.py
cluster/applications/connectracer/: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
cluster/applications/connectracer/src/: bpf.rs  main.rs  server.rs
cluster/applications/embedding-gateway/: .env  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
cluster/applications/embedding-gateway/embedding_gateway/: main.py  settings.py  telemetry.py
cluster/applications/embedding-retrieval-loader/: .env  CLAUDE.md  README.md  pyproject.toml
cluster/applications/embedding-retrieval-loader/embedding_retrieval_loader/: settings.py  wikipedia.py
cluster/applications/envoy-markdownify/: Cargo.toml  Dockerfile  Makefile  e2e.sh  skaffold.yaml
cluster/applications/envoy-markdownify/e2e/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  skaffold.yaml
cluster/applications/envoy-markdownify/k6/: index.js
cluster/applications/envoy-markdownify/manifests/: deployment.yaml  service.yaml
cluster/applications/envoy-markdownify/skaffold/: kustomization.yaml  namespace.yaml
cluster/applications/envoy-markdownify/src/: main.rs
cluster/applications/envoy-request-hasher/: Cargo.toml  Dockerfile  Makefile  e2e.sh  skaffold.yaml
cluster/applications/envoy-request-hasher/e2e/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  skaffold.yaml
cluster/applications/envoy-request-hasher/k6/: index.js
cluster/applications/envoy-request-hasher/manifests/: deployment.yaml  service.yaml
cluster/applications/envoy-request-hasher/skaffold/: kustomization.yaml  namespace.yaml
cluster/applications/envoy-request-hasher/src/: main.rs
cluster/applications/fluentd-delayed-unlink/: CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs
cluster/applications/fluentd-delayed-unlink/src/: bpf.rs  main.rs  server.rs
cluster/applications/headless-page-renderer/: CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/jupyterhub/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
cluster/applications/memory-bank/: .env  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
cluster/applications/memory-bank/memory_bank/: categorizer.py  merger.py  model.py  settings.py  telemetry.py
cluster/applications/promphet/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/promphet/promphet/: settings.py
cluster/applications/proxy-wasm/: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  e2e.sh  envoy.yaml  skaffold.yaml
cluster/applications/proxy-wasm/ext-proc/: Cargo.toml  Dockerfile  Makefile
cluster/applications/proxy-wasm/manifests/: deployment.yaml  horizontal_pod_autoscaler.yaml  kustomization.yaml  pod_disruption_budget.yaml  service.yaml
cluster/applications/proxy-wasm/patches/: deployment.yaml  kustomization.yaml
cluster/applications/proxy-wasm/skaffold/: kustomization.yaml  namespace.yaml
cluster/applications/realtime-search-exporter/: CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/rust_de_llama/: .env  .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENT.md  Makefile  README.md  TODO.md  build.rs  models_example.toml  test_chat_completion.sh
cluster/applications/rust_de_llama/models/: models.toml
cluster/applications/rust_de_llama/src/: config.rs  handler.rs  lib.rs  main.rs  middleware.rs  model_manager.rs  parallel.rs  wrapper.h
cluster/applications/slack-bolt-proxy/: .env  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/slack-bolt-proxy/slack_bolt_proxy/: context_logging.py  main.py  settings.py  telemetry.py
cluster/applications/translator/: .env  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
cluster/applications/translator/translator/: settings.py  telemetry.py
cluster/applications/whisper-worker/: .env  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
cluster/applications/whisper-worker/whisper_worker/: main.py  settings.py
insight/: .gitignore  .goreleaser.yaml  .goreleaser.yml  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  goreleaser.sh
insight/src/: connect.rs  cpu_usage.rs  helpers.h  http.rs  https.rs  lib.rs  main.rs  mysql.rs  ui.rs  vfs.rs
insight/src/connect/: connect.bpf.c
insight/src/core/: types.rs
insight/src/cpu_usage/: cpu_usage.bpf.c
insight/src/http/: http.bpf.c
insight/src/https/: https.bpf.c
insight/src/mysql/: mysql.bpf.c
insight/src/ui/: network.rs  resource.rs  trace.rs  vfs.rs
insight/src/vfs/: vfs.bpf.c
notebooks/: Makefile  batch.ipynb  cortex-api-chat.ipynb  cortex-api-gpt-images.ipynb  cortex-api-images.ipynb  cortex-api-speech.ipynb  cortex-api-transcriptions.ipynb  cortex-api-video-generation.ipynb  fillcsv.ipynb  openai-batch.ipynb  pyproject.toml  sql-injection-detection.ipynb
playgpt/: README.md  main.py  pyproject.toml
taurim/src-tauri/: Cargo.toml  tauri.conf.json
taurim/src-tauri/capabilities/: android.json  default.json
taurim/src-tauri/src/: lib.rs  main.rs
taurin/src-tauri/: Cargo.toml  Makefile  build.rs  tauri.conf.json
taurin/src-tauri/capabilities/: default.json  desktop.json  voice-indicator.json
taurin/src-tauri/crates/ipc/: Cargo.toml
taurin/src-tauri/src/: commands.rs  handlers.rs  main.rs
(+4650 files in other folders)
