[package]
name = "insight"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = { version = "0.19.1" }
plain = { version = "0.2" }
clap = { version = "4.1.4", features = ["derive"] }
httparse = { version = "1.5.1" }
solicit = { version = "0.4.4" }
hpack = { version = "0.3.0" }
termion = { version = "1.5.6" }
tui = { version = "0.17", default-features = false, features = ["termion"] }
num-traits = { version = "0.2" }
num-derive = { version = "0.3" }
enum_derive = { path = "../packages/enum_derive" }
error = { path = "../packages/error" }
elf = { path = "../packages/elf" }
procfs = { version = "0.12.0" }
num_cpus = { version = "1.13.1" }

[build-dependencies]
libbpf-cargo = { version = "0.13.1" }
