[project]
name = "notebooks"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipython>=9.2.0",
    "ipyvuetify>=1.11.1",
    "ipywidgets>=8.1.6",
    "nest-asyncio>=1.6.0",
    "openai>=1.68.2",
    "pandas>=2.2.2",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "jupyter>=1.1.1",
    "optuna>=3.6.0",
    "joblib>=1.4.0",
]
