[package]
name = "taurin"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tauri-plugin-store = { version = "2.0.0-beta.8" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = { version = "2.0.0-beta.7" }
tauri-plugin-global-shortcut = { version = "2.0.0-beta.6" }
tauri-plugin-updater = { version = "2.0.0-beta.7" }
