[project]
name = "api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "uvicorn==0.42.0",

    "aiohttp==3.12.15",
    "httpx==0.28.1",
    "fastapi==0.135.1",
    "websockets==13.1",
    "sse-starlette==1.6.5",
    "openai==2.29.0",
    "tiktoken==0.12.0",
    "python-magic==0.4.27",
    "playwright==1.58.0",
    "redis==7.3.0",
    "redis-om==1.0.6",
    "duckduckgo-search==3.9.6",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-instrumentation-aiohttp-client==0.61b0",
    "opentelemetry-instrumentation-requests==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-redis==0.61b0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "prometheus-client==0.17.0",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
    "embedding-retrieval",
    "cortex[agent]",
    "h11>=0.16.0",
    "cryptography>=43.0.0",
]

[tool.uv.sources]
embedding-retrieval = { path = "../embedding-retrieval", editable = true }
cortex = { path = "../packages/cortex", editable = true }
