[project]
name = "bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "uvicorn==0.23.1",
    "asyncio==3.4.3",
    "aiohttp==3.8.4",
    "httpx==0.28.1",
    "fastapi==0.115.2",

    "slack-bolt==1.17.0",

    "openai==1.79.0",
    "tiktoken==0.7.0",
    "python-magic==0.4.27",
    "playwright==1.46.0",
    "redis==4.6.0",
    "redis-om==1.0.2-beta",
    "boto3==1.26.162",
    "duckduckgo-search==3.9.6",
    "mistune==3.0.2",
    "google-auth-oauthlib==1.2.0",

    "pydantic==2.7.2",
    "pydantic-settings==2.7.1",

    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-exporter-otlp==1.24.0",
    "opentelemetry-instrumentation-aiohttp-client==0.45b0",
    "opentelemetry-instrumentation-httpx==0.45b0",
    "opentelemetry-instrumentation-requests==0.45b0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-instrumentation-botocore==0.45b0",
    "opentelemetry-instrumentation-redis==0.45b0",
    "opentelemetry-exporter-prometheus==0.45b0",
    "prometheus-client==0.17.0",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",

    "embedding-retrieval",
    "cortex[agent]",
]

[tool.uv.sources]
embedding-retrieval = { path = "../embedding-retrieval", editable = true }
cortex = { path = "../packages/cortex", editable = true }
