[package]
name = "connectracer"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
libbpf-rs = { version = "0.24.8" }
libbpf-sys = { version = "=1.4.3" }
plain = { version = "0.2" }
clap = { version = "4.5.38", features = ["derive"] }
opentelemetry = { version = "0.18.0" }
opentelemetry-prometheus = { version = "0.11.0" }
prometheus = { version = "0.13.3" }
futures = { version = "0.3.16" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
hyper = { version = "0.14.32", features = ["server", "tcp", "http1", "http2"] }
trust-dns-client = { version = "0.22.0" }

[build-dependencies]
libbpf-cargo = { version = "0.24.8" }

[profile.release]
strip = "symbols"
lto = true
panic = "abort"
