[tool.poetry]
name = "embedding-retrieval-loader"
version = "0.1.0"
description = ""
authors = ["Kai Aihara <kaidotio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"

asyncio = "^3.4.3"
aiohttp = "^3.8.4"
tensorflow-datasets = "^4.9.2"
tensorflow = "^2.13.0"

python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"

embedding-retrieval = { path = "../embedding-retrieval", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
