[project]
name = "embedding-retrieval-loader"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asyncio==3.4.3",
    "aiohttp==3.8.4",
    "tensorflow-datasets==4.9.2",
    "tensorflow==2.19.0",

    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",

    "embedding-retrieval",
]

[tool.uv.sources]
embedding-retrieval = { path = "../embedding-retrieval", editable = true }
