[package]
name = "envoy-request-hasher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "envoy-request-hasher"
path = "src/main.rs"

[workspace]
resolver = "2"

[features]
default = ["tracing"]
tracing = []

[dependencies]
async-stream = "0.3"
clap = { version = "4.5.38", features = ["derive"] }
envoy-grpc-ext-proc = "0.1.1"
hex = "0.4"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls", "tls-roots"] }
sha2 = "0.10"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tonic = "0.14"
tracing = { version = "0.1.37" }
tracing-opentelemetry = { version = "0.18.0" }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }

[profile.release]
strip = "symbols"
lto = true
panic = "abort"
