[tool.poetry]
name = "hub"
version = "0.1.0"
description = ""
authors = ["Kai Aihara <kaidotio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"

pycurl = "^7.45.2"
jupyterhub = "^5.3.0"
jupyterhub-kubespawner = "^6.2.0"
jupyterhub-idle-culler = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
