[project]
name = "memory-bank"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "uvicorn==0.42.0",

    "aiohttp==3.12.15",
    "fastapi==0.135.1",
    "openai==2.29.0",
    "tiktoken==0.12.0",
    "qdrant-client==1.10.1",
    "fastembed==0.7.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "prometheus-client==0.17.0",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
    "fastapi-mcp>=0.3.3",
]
