[project]
name = "realtime-search-exporter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "playwright==1.46.0",
    "asyncio==3.4.3",
    "fastapi==0.115.2",
    "uvicorn==0.23.1",

    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-exporter-prometheus==0.45b0",
    "prometheus-client==0.17.0",
]
