[project]
name = "realtime-search-exporter"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "playwright==1.58.0",

    "fastapi==0.135.1",
    "uvicorn==0.42.0",

    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "prometheus-client==0.17.0",
]
