[package]
name = "rust_de_llama"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }
clap = { version = "4.5.38", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.37" }
tracing-opentelemetry = { version = "0.18.0" }
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
axum = { version = "0.8.8" }
dotenv = "0.15.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-prometheus = { version = "0.11.0" }
opentelemetry-otlp = { version = "0.11.0", features = ["tls", "tls-roots"] }
pprof = { version = "0.14.0", features = ["protobuf-codec"] }
libflate = { version = "2.1.0" }
prometheus = { version = "0.13.3" }
error = { path = "../../../packages/error" }
opentelemetry-tracing = { path = "../../../packages/opentelemetry-tracing" }

autocxx = { version = "0.30.0" }
cxx = { version = "1.0" }
tokio-stream = { version = "0.1" }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.66" }
toml = { version = "0.8" }
rand = { version = "0.8.5" }
async-stream = { version = "0.3.5" }

[build-dependencies]
autocxx-build = { version = "0.30.0" }
cc = { version = "1.0", features = ["parallel"] }
cmake = { version = "0.1" }

[features]
default = ["tracing"]
tracing = []
jemalloc = ["tikv-jemallocator"]
cuda = []
