[tool.poetry]
name = "whisper-worker"
version = "0.1.0"
description = ""
authors = ["Kai Aihara <kaidotio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"

asyncio = "^3.4.3"
faster-whisper = "1.0.2"
redis = "^4.6.0"
boto3 = "^1.26.162"

pydantic = "^1.10.10"

python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
