[project]
name = "whisper-worker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asyncio==3.4.3",
    "faster-whisper==1.0.2",
    "redis==4.6.0",
    "boto3==1.26.162",

    "pydantic==2.7.2",
    "pydantic-settings==2.7.1",

    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",

    "langextract>=1.0.3",
]
