[project]
name = "whisper-worker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"

dependencies = [

    "faster-whisper==1.2.1",
    "redis==7.3.0",
    "boto3==1.42.73",

    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",

    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",

    "langextract>=1.0.3",
]
