[package]
name = "tauri-plugin-speech"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-speech"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }

[lib]
name = "tauri_plugin_speech"
crate-type = ["cdylib", "rlib"]

[features]
default = []
