[package]
name = "tauri-plugin-timer"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-timer"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }

[lib]
name = "tauri_plugin_timer"
crate-type = ["cdylib", "rlib"]

[features]
default = []
