[tool.poetry]
name = "jupyterhub_config"
version = "0.1.0"
description = ""
authors = ["Kai Aihara <kaidotio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
tornado = "^6.4"
jupyterhub = "^4.0.2"
jupyterhub-kubespawner = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
